--- a/views/product/itemDesc.handlebars
+++ b/views/product/itemDesc.handlebars
@@ -1,10 +1,9 @@
 <body>
-    {{#if products}}
+    {{#if product}}
     <!-- ========================= SECTION CONTENT ========================= -->
     <section class="section-content bg-white padding-y">
         <div class=" container">
             <!-- ============================ ITEM DETAIL ======================== -->
-            {{#each products}}
             <div class="row product-item">
                 <aside class="col-md-5">
                     <div class="card">
@@ -25,8 +24,8 @@
                 <main class="col-md-7">
                     <article class="product-info-aside">
 
-                        <h2 class="title mt-3 productName">{{name}}</h2>
-                        <a href="#" class="title mb-2">{{category}}</a>
+                        <h2 class="title mt-3 productName">{{product.name}}</h2>
+                        <a href="#" class="title mb-2">{{product.category}}</a>
 
                         <div class="rating-wrap mb-2">
                             <ul class="rating-stars">
@@ -46,7 +45,7 @@
                         </div> <!-- rating-wrap.// -->
 
                         <div class="price-wrap">
-                            <var class="price h4">$<span class="priceValue">${{price}}</span>0</var>
+                            <var class="price h4">$<span class="priceValue">{{product.price}}</span></var>
                         </div> <!-- price-wrap.// -->
 
                         <hr>
@@ -70,7 +69,7 @@
 
                             <dt class="col-sm-3">Availabilty</dt>
                             <dd class="col-sm-9">
-                                {{stock}}
+                                {{product.stock}}
                             </dd>
                         </dl>
 
@@ -111,7 +110,6 @@
         
             </div> <!-- box.// -->
         </div> <!-- row.// -->
-        {{/each}}
     </section>
     <!-- ========================= SECTION CONTENT END// ========================= -->
     {{else}}
