--- a/views/product/listProducts.handlebars
+++ b/views/product/listProducts.handlebars
@@ -1,8 +1,8 @@
 <div class="container">
-	{{#if products}}
+	{{#if product}}
 	<div class="card card-body">
 		<h3 class="text-primary">Products</h3>
-		{{#each products}}
+		{{#each product}}
 		<div class="card border-primary mb-2 w-100 mx-auto">
 			<div class="card-header">
 				<h5 class="card-title">{{name}}</h5>
